@@ -1,3 +1,10 @@
+2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* clock/clock.c, include/bsp.h, startup/bspstart.c,
+	startup/rtems-ctor.cc: Eliminate copies of the Configuration Table.
+	Use the RTEMS provided accessor macros to obtain configuration
+	fields.
+
 2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* include/bsp.h, startup/bspstart.c: Move interrupt_stack_size field
